<resources>
    <string name="app_name">AboutMe</string>
    <string name="name_label">Ren Amamiya</string>
    <string name="pt_logo_description">Phantom Thieves Logo</string>
    <string name="bio_string">The protagonist of Persona 5 is a transfer student at Shujin Academy. At the beginning of the game, he has little to no power or influence in the world and is restrained by the rules of the system he was born into.
    \n\nHowever, beneath his quiet demeanor is a strong-willed Wild Card leading the Phantom Thieves and capable of exploiting the Metaverse to affect reality. To his teammates, his code name is Joker, and to the residents of the Velvet Room he is known as the Trickster. The protagonist is the leader of the rebellious Phantom Thieves of Hearts, a group which aims to change society by touching the hearts of people and performing illegal heists.
    \n\nThe protagonist appears as a tall young man of slim to athletic build. He has a pale complexion with unkempt, wavy black hair that falls over his eyes. His eyes are gray and have long eyelashes. Despite his messy hair and slouched posture, he wears all of his clothes primly and properly.
    \n\nFor most of his civilian outfits, he also wears a set of large black glasses. The glasses are later revealed to be for aesthetic purposes and to help him maintain an unassuming image, as he did not need them before nor after his probation.[2] However, when his glasses are removed, his eyes are revealed to be sharp and give off an intense gaze.
        \n\n
    </string>
    <string name="ren_amamiya">Ren Amamiya</string>
    <string name="whats_your_name">What\'s your name</string>
</resources>