<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NameStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/name_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/nicknameEdit"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/whats_your_name"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="done"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:fontFamily="@font/personafont"/>

    <TextView
        android:id="@+id/nickname_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="gone"
        android:text="" />

    <ImageView
        android:id="@+id/phantom_logo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/pt_logo_description"
        app:srcCompat="@drawable/phantomthieves" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/protagonist"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/ren_amamiya"
                app:srcCompat="@drawable/ren" />

            <TextView
                android:id="@+id/bio_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:paddingStart="@dimen/layout_margin"
                android:paddingEnd="@dimen/layout_margin"
                android:text="@string/bio_string" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>